--- a/index.html
+++ b/index.html
@@ -3,27 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>African IT</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Simple HTML Page</title>
+    <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
 </head>
+
 <body>
-<!-- Building a Blog page -->
+        <!--Creating icons  -->
+        <nav>
+            <ul>
+                <li><a href="https://www.facebook.com/"><img src="facebook.png" alt="Facebook"></a></li>
+                <br>
+                <li><a href="https://www.linkedin.com/"><img src="linkedin.png" alt="LinkedIn"></a></li>
+            </ul>
+    <header>
+        <h1>African IT </h1>
+    </header>
+    <main>
+        <section>
+            <h2>About This Page</h2>
+            <p>This Blog is about Challenges Faced by IT Preofessions in Africa</p>
+        </section>
+        <section>
+<br> <br>
+                <h2>Workload</h2>
+                <p>IT professionals often face heavy workloads, which can lead to <im>stress and burnout</im>. This is especially true in fast-paced environments where deadlines are tight.</p>
+        </section> 
+        <section>
+            <h2>Cyber Security</h2>
+                <p>With the increasing number of cyber threats, IT professionals must constantly update their skills and knowledge to protect systems and data. This can be a significant challenge, especially in regions with limited resources.</p>
+        </section>
 
-            <h4> Creating a <strong>Blog Page</strong> - Challenges Facing African IT Professionals</h4>
-<!-- Refering to script.js-->
-            <p> There are many issues that prevent our African IT specialist from reaching their place of success.
-    This includes lack of skills, proper training, and not having information on the topic of IT from schools/young age.
-            </p>
-            <button><a href="https://businesstech.co.za/news/technology/529428/these-are-the-6-most-in-demand-tech-jobs-companies-in-south-africa-are-struggling-to-recruit-for/">Click Image for More Skills shortage by Business-Tech</a></button>
-            <type id="Image of an IT Specialist"> <img src="https://th.bing.com/th/id/OIP.7R8Q3Kj6ZcIrKJg5v0VULQHaLH?w=115&h=180&c=7&r=0&o=7&pid=1.7&rm=3">
+        <section>
+            <h2>Skill Gap</h2>
+                <p>There is often a shortage of skilled IT professionals in Africa, which can make it difficult for companies to find qualified candidates. This can lead to increased workloads for existing staff and can hinder the growth of the IT sector.</p>
+            
+        </section> 
 
-            <p><h3> In most cases, there are people with the <strong>"right"</strong> qualifications are labelled as not meeting the minimum requirements, by companies they desire to work for by using the term "degree deflated".</h3></p>
-        
+        <section>
+            <h2>Digital Transformation</h2>
+                <p>Many African countries are undergoing digital transformation, which can create challenges for IT professionals as they adapt to new technologies and processes. This can require significant training and development efforts.</p>
+        </section> 
 
+        <section>
+                <h2>Cloud Computing</h2>
+                <p>Because more companies move to the cloud for storage, IT professionals need to  learn new skills and adapt to different ways of working. This can be a challenge, especially for those who are used to traditional on-premises systems.</p>
+        </section>
 
-    <button id="Image of an IT Specialist"><img src="https://th.bing.com/th/id/OIP.S_yoOv9G3jZ6jk0nnIskqAHaE7?w=243&h=180&c=7&r=0&o=7&pid=1.7&rm=3"></button>
-    <p> <h3>Even though these challenges are known, relevant parties have nothing much to say to help such individuals</h3>
-    <h4><im><bold>Attached</bold></im> are the images of IT specialist being overloaded with work hence leading to burning-out </h4></p>
-    <script src="script.js"></script>
-        </body>
-</html>
+        <section>
+                <h2>Career Growth</h2>
+                <p>IT professionals in Africa may face limited opportunities for career growth and advancement. This can be due to a lack of resources, training programs, or mentorship opportunities.</p>
+        </section>
+
+        <section>
+                <h2>Hiring</h2>
+                <p>Hiring processes in the IT sector can be lengthy and complex, which can make it difficult for companies to find the right candidates quickly. This can lead to delays in project timelines and increased workloads for existing staff.</p>
+        </section>
+
+        <section>
+                <h2>Budgeting</h2>
+                <p>IT professionals often have to work with limited budgets, which can make it difficult to implement new technologies or hire additional staff. This can lead to increased workloads and stress for existing employees.</p>
+        </section>
+
+        <section>
+                <h2> Leadership supportt</h2>
+                <p>IT professionals may face challenges in getting support from leadership for their initiatives or projects. This can be due to a lack of understanding of the IT sector or a focus on short-term goals rather than long-term strategic planning.</p>
+        </section>
+
+        <section>
+                <h2>Analitics & Data Management</h2>
+                <p>With the increasing amount of data being generated, IT professionals must be able to effectively manage and analyze this data. This can be a significant challenge, especially in regions with limited resources and infrastructure.</p>
+
+        </section>
+
+        <section>
+                <h2>Automation</h2>
+                <p>More companies look to automate processes, IT professionals must adapt to new technologies and workflows. This can require significant training and development efforts, as well as a willingness to embrace change.</p>
+        </section>
+
+        <section>
+                <h2>Project Management</h2>
+                <p>IT professionals often have to manage multiple projects simultaneously, which can be a significant challenge. This requires strong organizational and time management skills, as well as the ability to prioritize tasks effectively.</p>
+        </section>
+<br> <br>
+        <section>
+                <h2>Conclusion</h2>
+                <p>In conclusion, IT professionals in Africa face a range of challenges that can impact their work and career growth. These challenges include heavy workloads, cyber security threats, skill gaps, digital transformation, cloud computing, limited career growth opportunities, lengthy hiring processes, budgeting constraints, lack of leadership support, data management issues, automation challenges, and project management demands. Addressing these challenges requires a collaborative effort from governments, businesses, and educational institutions to create a supportive environment for IT professionals in Africa.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; <strong>2025 African IT CodeTribe</strong> </p>
+        <p>Contact us at <a href="mailto:snenhlanhlamagubane99@gmail.com">Email</a></p>
+
+    </footer>
