IT Challenges webpage has been updated with a responsive button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+        <form action="./indextwo.html">
+                <button>Windows, Mac, Linux..</button>
+        </form>
         <!--Creating icons  -->
         <nav>
             <ul>
