GitHub account added to the webpage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
+    <title>African IT Challenges</title>
     <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
 </head>
@@ -19,6 +19,7 @@
                 <br>
                 <li><a href="https://www.linkedin.com/"><img src="linkedin.png" alt="LinkedIn"></a></li>
             </ul>
+        </nav>
     <header>
         <h1>African IT </h1>
     </header>
@@ -95,7 +96,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; <strong>2025 African IT CodeTribe</strong> </p>
+        <p>&copy; <strong>2025 | African IT | CodeTribe</strong> </p>
         <p>Contact us at <a href="mailto:snenhlanhlamagubane99@gmail.com">Email</a></p>
-
+        <p><a href="https://github.com/SineMag">GitHub</a></p>
     </footer>
