--- a/index.html
+++ b/index.html
@@ -1,102 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>African IT Challenges</title>
-    <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>African IT Challenges</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-        <form action="./indextwo.html">
+        <!--       <form action="./indextwo.html">
                 <button>Windows, Mac, Linux..</button>
-        </form>
+        </form> -->
         <!--Creating icons  -->
-        <nav>
-            <ul>
-                <li><a href="https://www.facebook.com/"><img src="facebook.png" alt="Facebook"></a></li>
-                <br>
-                <li><a href="https://www.linkedin.com/"><img src="linkedin.png" alt="LinkedIn"></a></li>
-            </ul>
-        </nav>
-    <header>
-        <h1>African IT </h1>
-    </header>
-    <main>
-        <section>
-            <h2>About This Page</h2>
-            <p>This Blog is about Challenges Faced by IT Preofessions in Africa</p>
-        </section>
-        <section>
-<br> <br>
-                <h2>Workload</h2>
-                <p>IT professionals often face heavy workloads, which can lead to <im>stress and burnout</im>. This is especially true in fast-paced environments where deadlines are tight.</p>
-        </section> 
-        <section>
-            <h2>Cyber Security</h2>
-                <p>With the increasing number of cyber threats, IT professionals must constantly update their skills and knowledge to protect systems and data. This can be a significant challenge, especially in regions with limited resources.</p>
-        </section>
+        <header>
+                <nav>
+                        <i class="fa fa-laptop"></i>
+                        <a href="#" title="Contact Us">Home</a>
+                        <a href="#" title="Contact Us">Contact Us</a>
+                        <a href="#" title="Contact Us">About</a>
+                </nav>
 
-        <section>
-            <h2>Skill Gap</h2>
-                <p>There is often a shortage of skilled IT professionals in Africa, which can make it difficult for companies to find qualified candidates. This can lead to increased workloads for existing staff and can hinder the growth of the IT sector.</p>
-            
-        </section> 
+                <h1>Challenges Faced by African IT Professions </h1>
+        </header>
 
-        <section>
-            <h2>Digital Transformation</h2>
-                <p>Many African countries are undergoing digital transformation, which can create challenges for IT professionals as they adapt to new technologies and processes. This can require significant training and development efforts.</p>
-        </section> 
+        <main>
+                <section style="text-align: left;">
+                        <section style="text-align: left; border-bottom: 1px solid black;">
+                                <h2>About This Page</h2>
+                                <p>This Blog is about Challenges Faced by IT Professions in Africa</p>
+                        </section><br> <br>
+                        <img src="./media/workload.webp" style="width: 25%;">
+                        <h2>Workload</h2>
+                        <p>IT professionals often face heavy workloads, which can lead to <im>stress and burnout</im>.
+                                This is especially true in fast-paced environments where deadlines are tight.</p><br>
+                        <img src="./media/cybersec.jpg" style="width: 25%; ">
+                        <h2>Cyber Security</h2>
+                        <p>With the increasing number of cyber threats, IT professionals must constantly update their
+                                skills and knowledge to protect systems and data. This can be a significant challenge,
+                                especially in regions with limited resources.</p><br>
+                        <img src="./media/skillsgap.jpg" style="width: 25%;">
+                        <h2>Skill Gap</h2>
+                        <p>There is often a shortage of skilled IT professionals in Africa, which can make it difficult
+                                for companies to find qualified candidates. This can lead to increased workloads for
+                                existing staff and can hinder the growth of the IT sector.</p><br>
 
-        <section>
-                <h2>Cloud Computing</h2>
-                <p>Because more companies move to the cloud for storage, IT professionals need to  learn new skills and adapt to different ways of working. This can be a challenge, especially for those who are used to traditional on-premises systems.</p>
+                        <img src="./media/digital trans.jpg" style="width: 25%;">
+                        <h2>Digital Transformation</h2>
+                        <p>Many African countries are undergoing digital transformation, which can create challenges for
+                                IT professionals as they adapt to new technologies and processes. This can require
+                                significant training and development efforts.</p><br>
+                        <img src="./media/cloudComp.jpg" style="width: 25%;">
+                        <h2>Cloud Computing</h2>
+                        <p>Because more companies move to the cloud for storage, IT professionals need to learn new
+                                skills and adapt to different ways of working. This can be a challenge, especially for
+                                those who are used to traditional on-premises systems.</p><br>
+                        <img src="./media/careergro.jpg" style="width: 25%;">
+                        <h2>Career Growth</h2>
+                        <p>IT professionals in Africa may face limited opportunities for career growth and advancement.
+                                This can be due to a lack of resources, training programs, or mentorship opportunities.
+                        </p><br>
+
+
+                        <img src="./media/hiring.jpg" style="width: 25%;">
+                        <h2>Hiring</h2>
+                        <p>Hiring processes in the IT sector can be lengthy and complex, which can make it difficult for
+                                companies to find the right candidates quickly. This can lead to delays in project
+                                timelines and increased workloads for existing staff.</p><br>
+
+
+<img src="./media/budget.jpg" style="width: 25%;">
+                        <h2>Budgeting</h2>
+                        <p>IT professionals often have to work with limited budgets, which can make it difficult to
+                                implement new technologies or hire additional staff. This can lead to increased
+                                workloads and stress for existing employees.</p><br>
+
+                                <img src="./media/leadsupport.jpg" style="width: 25%;">
+                        <h2> Leadership supportt</h2>
+                        <p>IT professionals may face challenges in getting support from leadership for their initiatives
+                                or projects. This can be due to a lack of understanding of the IT sector or a focus on
+                                short-term goals rather than long-term strategic planning.</p><br>
+
+                                <img src="./media/data management.jpg" style="width: 25%;">
+                        <h2>Analitics & Data Management</h2>
+                        <p>With the increasing amount of data being generated, IT professionals must be able to
+                                effectively manage and analyze this data. This can be a significant challenge,
+                                especially in regions with limited resources and infrastructure.</p><br>
+
+
+                        <h2>Automation</h2>
+                        <p>More companies look to automate processes, IT professionals must adapt to new technologies
+                                and workflows. This can require significant training and development efforts, as well as
+                                a willingness to embrace change.</p><br>
+
+                        <h2>Project Management</h2>
+                        <p>IT professionals often have to manage multiple projects simultaneously, which can be a
+                                significant challenge. This requires strong organizational and time management skills,
+                                as well as the ability to prioritize tasks effectively.</p><br>
+                        <br><br>
+                        <h2>Conclusion</h2>
+                        <p>In conclusion, IT professionals in Africa face a range of challenges that can impact their
+                                work and career growth. These challenges include heavy workloads, cyber security
+                                threats, skill gaps, digital transformation, cloud computing, limited career growth
+                                opportunities, lengthy hiring processes, budgeting constraints, lack of leadership
+                                support, data management issues, automation challenges, and project management demands.
+                                Addressing these challenges requires a collaborative effort from governments,
+                                businesses, and educational institutions to create a supportive environment for IT
+                                professionals in Africa.</p>
+                </section>
+        </main>
         </section>
-
-        <section>
-                <h2>Career Growth</h2>
-                <p>IT professionals in Africa may face limited opportunities for career growth and advancement. This can be due to a lack of resources, training programs, or mentorship opportunities.</p>
-        </section>
-
-        <section>
-                <h2>Hiring</h2>
-                <p>Hiring processes in the IT sector can be lengthy and complex, which can make it difficult for companies to find the right candidates quickly. This can lead to delays in project timelines and increased workloads for existing staff.</p>
-        </section>
-
-        <section>
-                <h2>Budgeting</h2>
-                <p>IT professionals often have to work with limited budgets, which can make it difficult to implement new technologies or hire additional staff. This can lead to increased workloads and stress for existing employees.</p>
-        </section>
-
-        <section>
-                <h2> Leadership supportt</h2>
-                <p>IT professionals may face challenges in getting support from leadership for their initiatives or projects. This can be due to a lack of understanding of the IT sector or a focus on short-term goals rather than long-term strategic planning.</p>
-        </section>
-
-        <section>
-                <h2>Analitics & Data Management</h2>
-                <p>With the increasing amount of data being generated, IT professionals must be able to effectively manage and analyze this data. This can be a significant challenge, especially in regions with limited resources and infrastructure.</p>
-
-        </section>
-
-        <section>
-                <h2>Automation</h2>
-                <p>More companies look to automate processes, IT professionals must adapt to new technologies and workflows. This can require significant training and development efforts, as well as a willingness to embrace change.</p>
-        </section>
-
-        <section>
-                <h2>Project Management</h2>
-                <p>IT professionals often have to manage multiple projects simultaneously, which can be a significant challenge. This requires strong organizational and time management skills, as well as the ability to prioritize tasks effectively.</p>
-        </section>
-<br> <br>
-        <section>
-                <h2>Conclusion</h2>
-                <p>In conclusion, IT professionals in Africa face a range of challenges that can impact their work and career growth. These challenges include heavy workloads, cyber security threats, skill gaps, digital transformation, cloud computing, limited career growth opportunities, lengthy hiring processes, budgeting constraints, lack of leadership support, data management issues, automation challenges, and project management demands. Addressing these challenges requires a collaborative effort from governments, businesses, and educational institutions to create a supportive environment for IT professionals in Africa.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; <strong>2025 | African IT | CodeTribe</strong> </p>
-        <p>Contact us at <a href="mailto:snenhlanhlamagubane99@gmail.com">Email</a></p>
-        <p><a href="https://github.com/SineMag">GitHub</a></p>
-    </footer>
+        <footer>
+                <p>&copy; <strong>2025 | African IT | CodeTribe</strong> </p>
+                <p>Contact us at <a href="mailto:snenhlanhlamagubane99@gmail.com">Email</a></p>
+                <p><a href="https://github.com/SineMag">GitHub</a></p>
+        </footer>
